# DataAdapter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  all_adapters.hpp  data_adapter.hpp
adapters/: array.hpp
include/: data_adapter  data_adapter.hpp  data_adapter_all.hpp
include/adapters/: array.hpp  vector.hpp
include/concepts/: associative.hpp  container.hpp  reversible.hpp  sequence.hpp
tests/: test_main.cpp  tests.h  tools.hpp
tests/array/: fixtures.hpp  tests.hpp
tests/include/: tools.hpp
tests/include/array/: fixtures.hpp  tests.hpp
tests/src/: example.cpp  test_main.cpp
